- correct padding alignement in .right .value

--- a/www/assets/css/src/07 detail.css
+++ b/www/assets/css/src/07 detail.css
@@ -9,6 +9,9 @@
 	text-align:right;
 	padding-right:5px;
 }
+div.field.right>div.value {
+	padding-right:0px;
+}
 .bold, div.field.bold>div.label, div.field.bold>div.value, div.field.bold>div.value>* {
 	font-weight:bold;
 }
